# hpc_prj_api_prontocardio

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup_instant_client.sh
app_prontocardio/: app.py  database.py  models.py  schema.py  security.py  settings.py
app_prontocardio/routers/: app_glosas.py  autenticacao.py  livre.py  usuarios.py
migrations/: env.py
migrations/versions/: 20260602_001_create_api_prontocardio_schema.py  20260612_002_create_registros_glosa_table.py  20260615_003_add_recurso_fields_to_registros_glosa.py  20260616_004_change_sn_glosado_to_string.py  20260616_005_add_sn_ativo_to_registros_glosa.py  20260616_006_add_recebimento_fields_to_registros_glosa.py  20260617_007_create_prazos_recurso_convenio.py  20260622_008_add_habilitado_to_prazos_recurso_convenio.py  20260622_009_add_user_access_management.py
server/: nginx.conf
tests/: conftest.py  test_app.py
tests/routers/: test_app_glosas.py  test_autenticacao.py  test_livre.py  test_usuarios.py
