[project]
name = "api-prontocardio"
version = "0.1.0"
description = ""
authors = [
    {name = "rafael.amorim",email = "raffaekk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.136.1,<0.137.0)",
    "ruff (>=0.15.13,<0.16.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "oracledb (>=4.0.0,<5.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.13,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]



[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint] # linter
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format] # formato
preview = true
quote-style = 'single'



[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings' # desconsiderar mensage warning



[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev app_prontocardio/app.py'
pre_tests = 'ruff check'
tests = 'pytest --cov=app_prontocardio -vv' # Cobertura de código testada
pos_tests = 'coverage html'